--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "discord.js": "^11.4.2",
     "fs": "0.0.1-security",
+    "mysql": "^2.16.0",
+    "node-schedule": "^1.3.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
   }
