--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mysql": "^2.16.0",
     "node-schedule": "^1.3.1",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "table": "^5.1.1",
+    "text-table": "^0.2.0"
   }
 }
