--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Rohan",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.5.0",
     "discord.js": "^11.4.2",
     "fs": "0.0.1-security",
     "mysql": "^2.16.0",
@@ -16,6 +17,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "table": "^5.1.1",
-    "text-table": "^0.2.0"
+    "text-table": "^0.2.0",
+    "vega": "^5.4.0"
   }
 }
