--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "request-promise": "^4.2.2",
     "table": "^5.1.1",
     "text-table": "^0.2.0",
+    "validator": "^12.0.0",
     "vega": "^5.4.0"
   }
 }
