--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "canvas": "^2.6.1",
     "discord.js": "^11.6.4",
+    "electron": "^8.2.5",
     "fs": "0.0.1-security",
     "mysql": "^2.18.1",
     "node-schedule": "^1.3.2",
