--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
 
 
+,
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Bot",
+            "program": "${workspaceFolder}\\View\\bot.js"
+        },
         {
             "type": "node",
             "request": "launch",
@@ -15,8 +22,8 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Bot",
-            "program": "${workspaceFolder}\\View\\bot.js"
+            "name": "Scraper",
+            "program": "${workspaceFolder}\\Model\\scraper.js"
         }
     ]
 }
