--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron": "^8.2.5",
     "fs": "0.0.1-security",
     "mysql": "^2.18.1",
+    "nightmare": "^3.0.2",
     "node-schedule": "^1.3.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
